[package]
name = "whatsappweb"
version = "0.0.2"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
build = "build.rs"
description = "WIP Whatsapp Web API Client"
repository = "https://github.com/wiomoc/whatsappweb-rs"
readme = "README.md"
categories = ["api"]
license = "MIT"
edition = "2018"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 16

[dependencies]
ws = {version = "0.9", features = ["ssl"]}
openssl-sys = { version = "*", features = ["vendored"] }
log = "0.4.1"
simple_logger = "0.5.0"
url = "2"
json = "0.11.13"
ring = "0.12.1"
base64 = "0.9.2"
qrcode = "0.7"
image = "0.19"
untrusted = "0.5"
rust-crypto = "^0.2"
serde = "1.0.64"
serde_derive = "1.0.64"
bincode = "1.0.0"
byteorder = "1.2.1"
protobuf = "2.0.4"
chrono = "0.4"
error-chain = "0.12.0"
chksum-hash-md5 = "0.0.1"
sqlx = { version = "0.7.0", features = [ "runtime-async-std", "sqlite", "postgres", "mysql" ] }
des = "0.8"
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
hex = "0.4"
async-std = "1.13"
generic-array = "0.14"
redis = "0.32.5"
fs_extra = "1.3"
duct = "0.13.3"
duct_sh = "0.13.0"
actix-web = "4"
actix-cors = "0.7"
actix-session = { version = "0.9", features = ["cookie-session"] }
amxml = "0.5"
ldap3 = "0.11.5"
# CWE-918 SSRF dependencies (COMMENTED OUT - conflicts with ring 0.12.1):
# ureq = "2.10"
# tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
quick-js = "0.4.1"
wasmtime = { version = "39.0.1", features = ["cranelift"] }
rocket = { version = "0.5", features = ["json"] }
jsonwebtoken-rustcrypto = "1.2.0"
smol = "2.0"
openssl = "0.10.75"
password-hash = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = "0.2"

[features]
default-features = ["media"]
"media" = []

[build-dependencies]
protobuf-codegen-pure = "2.0.4"